--- a/app/globals.scss
+++ b/app/globals.scss
@@ -4,12 +4,12 @@
 @tailwind components;
 @tailwind utilities;
 
-p, a, li, span {
+p, a, li, span, input, textarea {
   font-family: $Garet;
   color: #333333;
 }
 
-h2, h3, h4 {
+h1, h2, h3, h4 {
   font-family: $ClassyVogue;
 }
 
