--- a/app/globals.scss
+++ b/app/globals.scss
@@ -20,3 +20,38 @@ h1, h2, h3, h4 {
 .vogue-2 {
   font-family: $ClassyVogue2;
 }
+
+
+.images-container img { 
+  animation: carousel 15s infinite linear; 
+} 
+
+.images-container img:nth-child(1) { 
+  animation-delay: 0s; 
+} 
+
+.images-container img:nth-child(2) { 
+  animation-delay: 5s; 
+} 
+
+.images-container img:nth-child(3) { 
+  animation-delay: 10s; 
+} 
+
+@keyframes carousel { 
+  0% { 
+    opacity: 0; 
+  } 
+  20% { 
+    opacity: 1; 
+  } 
+  33.33% { 
+    opacity: 1; 
+  } 
+  53.33% { 
+    opacity: 0; 
+  } 
+  100% { 
+    opacity: 0; 
+  } 
+} 
