--- a/app/globals.scss
+++ b/app/globals.scss
@@ -4,6 +4,26 @@
 @tailwind components;
 @tailwind utilities;
 
+html.lenis, html.lenis body {
+  height: auto;
+}
+
+.lenis.lenis-smooth {
+  scroll-behavior: auto !important;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
+
+.lenis.lenis-smooth iframe {
+  pointer-events: none;
+}
+
 p, a, li, span, input, textarea {
   font-family: $Garet;
   color: #333333;
@@ -55,3 +75,6 @@ h1, h2, h3, h4 {
     opacity: 0; 
   } 
 } 
+
+//Testimonials
+
