Nuevo pdf, nuevo banner mobile

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -38,6 +38,10 @@ h1, h2, h3, h4 {
   font-family: $ArimoBold;
 }
 
+.garet-heavy {
+  font-family: $Garet-Heavy;
+}
+
 .vogue-2 {
   font-family: $ClassyVogue2;
 }
