New section promotions

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -21,7 +21,7 @@ html.lenis, html.lenis body {
 }
 
 
-p, a, li, span, input, textarea {
+p, a, li, span, input, textarea, .garet {
   font-family: $Garet;
   color: #333333;
 }
