Nueva promocion, metadata agregada a todas las paginas

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -38,9 +38,14 @@ h1, h2, h3, h4 {
   font-family: $ArimoBold;
 }
 
+.arimo {
+  font-family: $Arimo;
+}
+
 .garet-heavy {
   font-family: $Garet-Heavy;
 }
+
 
 .vogue-2 {
   font-family: $ClassyVogue2;
