New Banner promotions

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -20,6 +20,11 @@ html.lenis, html.lenis body {
   overflow: hidden;
 }
 
+@theme {
+    --color-brand-cream: #CDCBC0;
+}
+
+
 
 p, a, li, span, input, textarea, .garet {
   font-family: $Garet;
